this will add min heights to stop the page breaking on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   gap: 4rem;
-  height: 100vh;
+  min-width: none;height: 100vh;
   text-align: center;
 }
 
@@ -78,7 +78,7 @@ h1 {
 }
 
 #transform-your-brand {
-  height: 80vh;
+  min-height: 80vh;
   display: flex;
 }
 
@@ -121,7 +121,7 @@ h1 {
 }
 
 #stand-out {
-  height: 80vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: row-reverse;
 }
@@ -182,7 +182,7 @@ h2 {
 
 .design-and-photography-containers {
   width: 50%;
-  height: 80vh;
+  min-height: 80vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
@@ -283,7 +283,7 @@ h5 {
 }
 
 footer {
-  height:40vh;
+  min-height:40vh;
   background-color:rgba(144,212,197,255);
   display:flex;
   flex-direction: column;
@@ -366,10 +366,12 @@ h2 {
 
 #transform-your-brand{
   flex-direction:column-reverse;
+  min-height:40vh;
 }
 
 #stand-out {
   flex-direction:column-reverse;
+  min-height:40vh;
 }
 
 #design-and-photography {
@@ -391,9 +393,9 @@ h2 {
 }
 
 #stand-out-left-container {
-width:100%;
-padding-top:3.55rem;
-padding-bottom:3.55rem;
+  width:100%;
+  padding-top:3.55rem;
+  padding-bottom:3.55rem;
 }
 
 }
